# measuring-market-inefficiency-conditional-correlation

./: .gitignore  README.md  etude.py  main.ipynb  pyproject.toml  requirements.txt  setup.sh  setup_matlab.bat  test.mlx  test.py
R/: dcc.R  dev.R
config/: config.ini
data/: .RData  .Rhistory  ftse100.csv  ftsemib.csv  loader.py  s&p500.csv  ssec.csv
notebooks/: OkunRegression.ipynb  Replication of.ipynb  dev.ipynb  window-scaled-variance.ipynb
output/: granger_tests_results.xlsx  inefficiency.xlsx  performance_ftse100_ftsemib.csv  performance_ftse100_s&p500.csv  performance_ftse100_ssec.csv  performance_ftsemib_ssec.csv  performance_s&p500_ftsemib.csv  performance_s&p500_ssec.csv  var_results.xlsx
output/covid/: granger_tests_results.xlsx  var_results.xlsx
output/etude_estimateurs/: all_results.json  all_results_save_1000.json
output/financial_crisis/: granger_tests_results.xlsx  var_results.xlsx
output/russian_war/: granger_tests_results.xlsx  var_results.xlsx
src/: enums.py  framework.py  garch_modeling.py  hurst_calculation.py  hurst_methods.py  inefficiency.py  inefficiency_calculator.py  launcher.py  results.py  utils.py
src/dcc/: dcc_implementation_package_cleaned.py  dcc_implementation_sheppard.py
src/etude_stat/: comparaison_estimateurs.py
src/ext/: AddMethods.py  HurstIndexSolver.py
src/garch/: __init__.py  abstract_mgarch.py  mgarch_dcc.py
tests_matlab/: computeDCC.m  estimateGARCH.m  granger_test.m  inefficiency.xlsx  performADFTest.m  performARCHTest.m  performGARCH.m  setup_matlab.bat  test.mlx  test_matlab.py  tests.py
(+52 files in other folders)
