[project]
name = "measuring-market-inefficiency-conditional-correlation"
version = "0.1.0"
description = "Replication of the following Research article : 'Measuring conditional correlation between financial markets’ inefficiency'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "configparser>=7.2.0",
    "hurst>=0.0.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "stochastic>=0.4.0",
    "yfinance>=0.2.55",
]
